Allow long poll when reading new messages
Also unify the peek and pop handlers
